# Patchbay

./: .gitignore  CLAUDE.md  LICENSE  README.md  UNIVERSAL_LLM_GATEWAY_PROMPT.md  pyproject.toml
ai/: pyproject.toml
ai/patchbay_ai/: __init__.py  app.py  provider.py  session.py  tools.py
apps/gateway/: Dockerfile  alembic.ini  pyproject.toml
apps/gateway/src/: main.py
apps/gateway/src/a2a/: __init__.py
apps/gateway/src/api/: health.py
apps/gateway/src/api/v1/: chat.py  keys.py  mcp.py  models.py  router.py  usage.py
apps/gateway/src/api/ws/: live_metrics.py
apps/gateway/src/billing/: alert_manager.py  budget_enforcer.py  cost_calculator.py  rate_limiter.py
apps/gateway/src/caching/: exact_cache.py  semantic_cache.py
apps/gateway/src/core/: config.py  database.py  exceptions.py  logging.py  redis.py  security.py
apps/gateway/src/db/: seed.py
apps/gateway/src/db/models/: audit_log.py  guardrail_violations.py  mcp_servers.py  mcp_tools.py  models.py  organizations.py  projects.py  provider_routes.py  requests.py  routing_policies.py  semantic_cache.py  tool_calls.py  virtual_keys.py
apps/gateway/src/guardrails/: base.py  content_filter.py  jailbreak_detector.py  pii_redaction.py
apps/gateway/src/mcp_orchestration/: client_pool.py  registry.py  schema_translator.py  task_manager.py
apps/gateway/src/observability/: metrics.py  tracing.py
apps/gateway/src/patchbay_gateway/: __init__.py  main.py
apps/gateway/src/patchbay_gateway/api/: __init__.py  health.py
apps/gateway/src/patchbay_gateway/billing/: __init__.py  alert_manager.py  rate_limiter.py
apps/gateway/src/patchbay_gateway/caching/: __init__.py
apps/gateway/src/patchbay_gateway/core/: __init__.py  database.py
apps/gateway/src/patchbay_gateway/db/: __init__.py  seed.py
apps/gateway/src/patchbay_gateway/guardrails/: __init__.py
apps/gateway/src/patchbay_gateway/mcp_orchestration/: __init__.py  client.py  client_pool.py  registry.py  schema_translator.py
apps/gateway/src/patchbay_gateway/observability/: __init__.py
apps/gateway/src/patchbay_gateway/providers/: __init__.py  anthropic_adapter.py  azure_openai_adapter.py  deepseek_adapter.py  google_adapter.py  local_adapter.py  openai_adapter.py  openrouter_adapter.py  registry.py  schemas.py  vertex_adapter.py
apps/gateway/src/patchbay_gateway/routing/: __init__.py  circuit_breaker.py
apps/gateway/src/providers/: anthropic_adapter.py  azure_openai_adapter.py  base.py  bedrock_adapter.py  deepseek_adapter.py  google_adapter.py  local_adapter.py  openai_adapter.py  openrouter_adapter.py  registry.py  schemas.py  vertex_adapter.py
apps/gateway/src/routing/: circuit_breaker.py  engine.py  fallback_chain.py
apps/gateway/src/routing/strategies/: base.py  cost_based.py  latency_based.py  learned.py  semantic.py
apps/gateway/src/tasks/: __init__.py  celery_tasks.py
apps/gateway/tests/: __init__.py  conftest.py
apps/gateway/tests/unit/: __init__.py  test_billing.py  test_circuit_breaker.py  test_cost_strategy.py  test_guardrails.py  test_mcp_translator.py  test_provider_registry.py  test_routing_engine.py
cli/: README.md  pyproject.toml
cli/patchbay/: __init__.py  config.py  gateway.py  main.py  provider.py  providers.py  session.py  tools.py  ui.py
cli/patchbay/tui/: __init__.py  agent.py  app.py  keyboard.py  popups.py  themes.py  tokyo-night.tcss  tools.py
cli/patchbay_cli/: __init__.py  main.py
tui-rs/: Cargo.toml
tui-rs/src/: gateway.rs  main.rs  tools.rs
(+84 files in other folders)
