[project]
name = "patchbay"
version = "0.1.0"
description = "Universal LLM Gateway & Orchestration Platform"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "T20"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/gateway/tests"]
