[project]
name = "patchbay-ai"
version = "0.1.0"
description = "Patchbay AI - Interactive AI coding assistant"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
pai = "patchbay_ai.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
