[project]
name = "patchbay"
version = "0.1.0"
description = "Patchbay - Universal LLM Gateway CLI & AI Coding Assistant"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "rich>=13.0",
    "textual>=0.80",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
patchbay = "patchbay.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
