[package]
name = "patchbay-tui"
version = "0.1.0"
edition = "2021"
description = "Patchbay AI - Terminal UI (Ratatui)"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
rand = "0.8"
futures-util = "0.3"
